# hillelbot_Test

./: .gitignore  CMakeLists.txt  MyRequest.json  README.md  vcpkg.json
src/: main.cpp
